--- a/12/nav_practice.css
+++ b/12/nav_practice.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  /* border-box : 테두리와 안쪽 여백의 크기도 요소의 크기로 고려 */
   box-sizing: border-box;
 }
 
@@ -38,19 +39,6 @@ nav {
   font-size: 14px;
 }
 
-.burger {
-  display: none;
-  cursor: pointer;
-}
-
-.burger div {
-  width: 25px;
-  height: 3px;
-  background-color: rgb(226, 226, 226);
-  margin: 5px;
-  transition: all 0.3s ease;
-}
-
 @media screen and (max-width: 1024px) {
   .nav-links {
     width: 60%;
@@ -61,7 +49,11 @@ nav {
   .nav-links li {
     opacity: 0;
   }
-  .burger {
-    display: block;
+
+  .burger div {
+    width: 25px;
+    height: 3px;
+    background-color: rgb(226, 226, 226);
+    margin: 5px;
   }
 }
